--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": false,
-      "cwd": "/workspace/Data_Structure_and_algorithm_class/lab/week2",
-      "program": "/workspace/Data_Structure_and_algorithm_class/lab/week2/build/Debug/outDebug",
+      "externalConsole": true,
+      "cwd": "f:/Coding/Data Structure & algorithm class",
+      "program": "f:/Coding/Data Structure & algorithm class/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
